# everything-plus

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: database.rs  everything_sdk.rs  indexer.rs  lib.rs  main.rs  search.rs  types.rs
docs/: DEVELOPMENT.md  USER_GUIDE.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  MainApp.tsx  index.css
frontend/src/components/: FilterPanel.tsx  SearchInput.tsx  SearchResults.tsx  SettingsDialog.tsx  SpotlightModal.tsx
frontend/src/hooks/: useSearch.ts  useTheme.ts
frontend/src/lib/: tauri.ts  themes.ts  utils.ts
frontend/src/types/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
