[workspace]
members = ["backend", "src-tauri"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "1.5", features = ["window-close", "window-maximize", "dialog-message", "fs-read-file", "window-request-user-attention", "window-center", "fs-create-dir", "dialog-confirm", "window-show", "window-hide", "window-set-max-size", "fs-write-file", "dialog-ask", "window-minimize", "fs-read-dir", "global-shortcut-all", "window-set-focus", "dialog-open", "window-set-fullscreen", "window-unmaximize", "process-exit", "window-set-position", "notification-all", "window-set-skip-taskbar", "window-set-always-on-top", "window-set-icon", "shell-open", "window-set-resizable", "window-set-size", "window-unminimize", "fs-exists", "path-all", "window-set-min-size", "dialog-save", "process-relaunch", "window-set-title"] }
