[package]
name = "everything-plus-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "everything_clone_backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1.10.4"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono"] }

# Windows-specific dependencies for Everything SDK integration
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "processthreadsapi", "handleapi", "libloaderapi", 
    "winnt", "winerror", "stringapiset", "winnls"
] }
libc = "0.2"
wide = "0.5"
