[package]
name = "everything-plus"
version = "0.0.1"
description = "A modern file search application for Windows"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/your-username/everything-plus"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { workspace = true, features = [ "window-close", "window-maximize", "dialog-message", "fs-read-file", "window-request-user-attention", "window-center", "fs-create-dir", "dialog-confirm", "window-show", "window-hide", "window-set-max-size", "fs-write-file", "dialog-ask", "window-minimize", "fs-read-dir", "global-shortcut-all", "window-set-focus", "dialog-open", "window-set-fullscreen", "window-unmaximize", "process-exit", "window-set-position", "notification-all", "window-set-skip-taskbar", "window-set-always-on-top", "window-set-icon", "shell-open", "window-set-resizable", "window-set-size", "window-unminimize", "fs-exists", "path-all", "window-set-min-size", "dialog-save", "process-relaunch", "window-set-title"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
everything-plus-backend = { path = "../backend" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
